--- a/app/src/main/res/layout/fragment_qr.xml
+++ b/app/src/main/res/layout/fragment_qr.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">
     <TextView
@@ -9,7 +9,6 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         style="@style/App.TextStyle.Primary"
-
         android:text="QR Code"/>
 
 
@@ -18,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="12dp"/>
 
     <TextView
         android:id="@+id/text_save"
