--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -235,14 +235,15 @@
     </div>
     <div class="clearfix"></div>
 </div>
-<div class="ui-dialog save-dialog" >
+<div class="ui-dialog save-dialog">
     <div class="ui-dialog-title">Save Story</div>
     <div class="ui-dialog-content">
         Comfirm to save story ？
     </div>
     <div class="ui-dialog-btns">
-        <a class="ui-btn btn-cancle">Cancel</a>
-        <a class="ui-btn btn-submit">Confirm</a>
+        <a class="ui-btn btn-cancle" style="float:left;margin-left:0.5rem">Cancel</a>
+        <a class="ui-btn btn-saveno" style="padding:0.5rem 0rem">Don't Save</a>
+        <a class="ui-btn btn-save btn-submit">Save</a>
     </div>
     <div class="clearfix"></div>
 </div>
@@ -257,7 +258,7 @@
     <div class="clearfix"></div>
 </div>
 <div class="ui-dialog download-dialog" >
-    <div class="ui-dialog-title">Save Story</div>
+    <div class="ui-dialog-title">Tips</div>
     <div class="ui-dialog-content">
         Download errow!
     </div>
