--- a/app/src/main/assets/www/views/test2.html
+++ b/app/src/main/assets/www/views/test2.html
@@ -802,6 +802,18 @@
         <a class="ui-btn btn-cancle">Close</a>
     </div>
 </div>
+<div class="ui-dialog save-dialog"  style="display: block">
+    <div class="ui-dialog-title">Save Story</div>
+    <div class="ui-dialog-content">
+        Comfirm to save story ？
+    </div>
+    <div class="ui-dialog-btns">
+        <a class="ui-btn btn-cancle" style="float:left;margin-left:0.5rem">Cancel</a>
+        <a class="ui-btn btn-cancle" style="padding:0.5rem 0rem">Don't Save</a>
+        <a class="ui-btn btn-submit">Save</a>
+    </div>
+    <div class="clearfix"></div>
+</div>
 
 <!--<script src="../public/js/cordova.js"></script>-->
 <!--<script type="text/javascript" charset="utf-8" src="cordova.file.js"></script>-->
