--- a/app/src/main/assets/www/views/header.html
+++ b/app/src/main/assets/www/views/header.html
@@ -24,3 +24,5 @@
     <script type="text/javascript" src="file:///android_asset/www/public/js/jquery-1.8.2.min.js"></script>
 </head>
 <body>
+<div class="loading" style="display:none;position: fixed;left:0;top:0;bottom:0;right:0;background-image:url(file:///android_asset/www/public/img/loading.gif);background-position:50% 50%;background-size:cover;z-index: 10000">
+</div>
