修改中文改成英文 活动中心界面

--- a/app/src/main/res/drawable/divider_for_list.xml
+++ b/app/src/main/res/drawable/divider_for_list.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle" >
 
     <gradient
-        android:centerColor="@color/app_sixth_transparent_50p"
-        android:endColor="@color/app_sixth_transparent_50p"
-        android:startColor="@color/app_sixth_transparent_50p"
+        android:centerColor="#eaebeb"
+        android:endColor="#eaebeb"
+        android:startColor="#eaebeb"
         android:type="linear" />
     <size android:height="0.5dp"/>
 
