--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -11,6 +11,7 @@
     <TextView
         android:id="@+id/text_privacy"
         style="@style/App.TextStyle.Secondary"
+        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -21,6 +22,7 @@
     <TextView
         android:id="@+id/text_terms"
         style="@style/App.TextStyle.Secondary"
+        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -38,11 +40,13 @@
         android:background="@drawable/menu_item_background_selector"
         android:textColor="@color/app_about_text_color"
         android:text="@string/about_content"
+        android:textSize="20dp"
         android:layout_marginTop="64dp"/>
 
     <TextView
         android:id="@+id/text_rate"
         style="@style/App.TextStyle.Secondary"
+        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
