--- a/app/src/main/res/layout/fragment_gift.xml
+++ b/app/src/main/res/layout/fragment_gift.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/app_sixth_transparent_80p">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="1.2"
         android:orientation="horizontal"
-        android:alpha="0.92"
-        android:background="@drawable/gallery_item_shadow_bg">
+        android:alpha="0.9"
+
+        >
 
         <ImageView
             android:id="@+id/btn_close"
@@ -20,23 +22,19 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="24dp"
             android:layout_marginRight="16dp"
-            android:background="@drawable/icon_close_normal" />
+            android:background="@mipmap/iconc_close" />
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/gift_gallery"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.5"
-        android:background="@color/app_sixth_transparent_80p"/>
+        android:layout_weight="6.9"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:alpha="0.92"
-        android:background="@drawable/gallery_item_shadow_bg">
-
+        android:orientation="horizontal">
     </LinearLayout>
 </LinearLayout>
