--- a/app/src/main/assets/www/public/css/mod1.css
+++ b/app/src/main/assets/www/public/css/mod1.css
@@ -472,3 +472,5 @@ left:50%;margin-left:-15px;-webkit-animation: move2 2s infinite;}
 
  footer {display:block; position:fixed; bottom:0; width:100%; line-height:2.5;  color:#fff; font-size:12px; text-align:center; background-color:#333; z-index:100; opacity:0.6}
 footer a { color:white; }
+
+.font-link {text-decoration: underline!important;color:#448aff!important;}
