--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -421,6 +421,14 @@
 
 
     function doSaveStory(){
+        if($("#storyStageList").css("display") == "block") {
+            $("#storyStageList .icon-arrow-left").click();
+            return false;
+        }
+        if($("#editorText").css("display") == "block") {
+            $("#editorText .backToMain").click();
+            return false;
+        }
         WisapeEditer.SaveStory();
     }
 </script>
