--- a/app/src/main/assets/www/views/test2.html
+++ b/app/src/main/assets/www/views/test2.html
@@ -472,9 +472,6 @@
                 function delayedResize () {
                     window.setTimeout(wordEditResize, 0);
                 }
-
-
-
                 observe(text, 'change',  wordEditResize);
                 observe(text, 'cut',     delayedResize);
                 observe(text, 'paste',   delayedResize);
@@ -803,7 +800,7 @@
         <a class="ui-btn btn-cancle">Close</a>
     </div>
 </div>
-<div class="ui-dialog save-dialog"  style="display: block">
+<div class="ui-dialog save-dialog"  style="display: none">
     <div class="ui-dialog-title">Save Story</div>
     <div class="ui-dialog-content">
         Comfirm to save story ？
